# keywords-scrapper

./: .gitignore  LICENSE  README.md  app.py  countries.json  pyproject.toml
src/: bot.py  config.py
src/services/: __init__.py  database.py  excel.py  google_sheets.py  keywords_manager.py  models.py
